logicapi