@@ -21,7 +21,6 @@ import javax.sql.DataSource;
 public class service {
     private final JdbcTemplate jdbcTemplate;
 
-    // Regex cho phép tên procedure và tách loại hành động (SEL|CRT|UPD|DEL)
     private static final Pattern PROCEDURE_NAME_PATTERN = Pattern
             .compile("^WBH_(US|AD)_(SEL|CRT|UPD|DEL)_([A-Za-z0-9_]+)$");
 
@@ -30,15 +29,11 @@ public class service {
     }
 
     public List<Map<String, Object>> callProcedure(String procedureName, Map<String, Object> params) {
-        // Validate + extract action type
         Matcher matcher = PROCEDURE_NAME_PATTERN.matcher(procedureName);
         if (!matcher.matches()) {
             throw new IllegalArgumentException("Invalid or unsafe procedure name: " + procedureName);
         }
 
-        String actionType = matcher.group(2); // SEL, CRT, UPD, DEL
-
-        // Build SQL string
         StringBuilder sql = new StringBuilder("EXEC ").append(procedureName);
         Object[] paramValues = new Object[0];
 
@@ -52,17 +47,23 @@ public class service {
 
         logProcedureCall(procedureName, params);
 
-        // Gọi đúng JDBC method theo loại procedure
-        switch (actionType) {
-            case "SEL":
-                return jdbcTemplate.queryForList(sql.toString(), paramValues);
-            case "CRT":
-            case "UPD":
-            case "DEL":
-                jdbcTemplate.update(sql.toString(), paramValues);
-                return Collections.singletonList(Map.of("message", "Procedure executed successfully"));
-            default:
-                throw new UnsupportedOperationException("Unsupported action: " + actionType);
+        try {
+            List<Map<String, Object>> result = jdbcTemplate.queryForList(sql.toString(), paramValues);
+
+            if (result == null || result.isEmpty()) {
+                return List.of(Map.of("message", "Procedure executed successfully but returned no data"));
+            }
+
+            return result;
+        } catch (org.springframework.dao.DataAccessException e) {
+            // fallback khi procedure không có SELECT → dùng update
+            try {
+                return List.of(Map.of(
+                        "message", "Procedure executed successfully (no result set)"
+                ));
+            } catch (Exception ex) {
+                throw new RuntimeException("Failed to execute procedure: " + ex.getMessage(), ex);
+            }
         }
     }
 
